# genetic_algorithm

./: CMakeLists.txt  README.md  engine.cpp  main.cpp
EasyThreadPool/: CMakeLists.txt  easythreadpool.cpp  easythreadpool.h
GenerateIterate/: CMakeLists.txt  GenerateIterate.cpp  GenerateIterate.h  GeneticIterate.h  Train.h
ParallelComputing/: CMakeLists.txt  ParallelPlay.cpp  ParallelPlay.h
PlayGame/: CMakeLists.txt
PlayGame/SixPieces/: CMakeLists.txt  SixInitialize.cpp  SixInitialize.h  SixPiece.cpp  SixPiece.h  SixPiece_test.cpp  SixSelfPlay.cpp  SixSelfPlay.h
ThreadPool/: CMakeLists.txt  ThreadPool.hpp  Threadpool.cpp  main.cpp
conf/: TrainData.json  config.json
public/: tsglobal.hpp
queue/: CMakeLists.txt  ringqueue.hpp  rte_ring.cpp  rte_ring.h  test.cpp  test.h
